--- a/tannae-client/app/src/main/AndroidManifest.xml
+++ b/tannae-client/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.SignUpActivity"
+            android:parentActivityName=".activity.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".activity.FindActivity"
