--- a/tannae-server/build.gradle
+++ b/tannae-server/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
 	// Spring Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	// Spring Data JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
