--- a/tannae-client/app/src/main/AndroidManifest.xml
+++ b/tannae-client/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:theme="@style/Theme.TANNAE"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".activity.main.passenger.RequestActivity"
+            android:name=".activity.main.NavigationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.main.RequestActivity"
             android:exported="false" />
         <activity
             android:name=".activity.menu.PointActivity"
