[Update] Client-Server 202208281746
- WebSocket connection

--- a/tannae-client/app/build.gradle
+++ b/tannae-client/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation files('libs/libDaumMapAndroid.jar')
+    implementation "org.java-websocket:Java-WebSocket:1.4.0"
 }
