--- a/tannae-client/app/build.gradle
+++ b/tannae-client/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation files('libs/libDaumMapAndroid.jar')
     implementation "org.java-websocket:Java-WebSocket:1.4.0"
+    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.6'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
