--- a/tannae-server/build.gradle
+++ b/tannae-server/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
+	// JSON
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
