--- a/tannae-server/build.gradle
+++ b/tannae-server/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	// JSON
-	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	implementation group: 'org.json', name: 'json', version: '20220320'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
