--- a/tannae-server/src/main/resources/application.properties
+++ b/tannae-server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tannae
 spring.datasource.username=root
 # Database Password
 spring.datasource.password=wodnjs0716.
+#spring.jpa.show-sql=true
