--- a/tannae-server/src/main/resources/application.properties
+++ b/tannae-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Source URL
 spring.datasource.url=jdbc:mysql://localhost:3306/tannae
 # Database Username
-spring.datasource.username=root
+spring.datasource.username=capstone
 # Database Password
-spring.datasource.password=wodnjs0716.
+spring.datasource.password=zoqtmxhs17
 #spring.jpa.show-sql=true
