--- a/tannae-server/src/main/resources/application.properties
+++ b/tannae-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Source URL
-spring.datasource.url=jdbc:mysql://15.164.225.233:3306/tannae
+spring.datasource.url=jdbc:mysql://15.164.225.233:3306/tannaedb
 # Database Username
 spring.datasource.username=capstone
 # Database Password
