--- a/tannae-server/src/main/resources/application.properties
+++ b/tannae-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Source URL
-spring.datasource.url=jdbc:mysql://15.164.225.233:3306/tannaedb
+spring.datasource.url=jdbc:mysql://localhost:3306/tannaedb
 # Database Username
-spring.datasource.username=capstone
+spring.datasource.username=root
 # Database Password
-spring.datasource.password=zoqtmxhs17
+spring.datasource.password=wodnjs0716.
 #spring.jpa.show-sql=true
