--- a/tannae-server/src/main/resources/application.properties
+++ b/tannae-server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=root
 # Database Password
 spring.datasource.password=wodnjs0716.
 #spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
