[Server-Update] SNAPSHOT 202210181922

--- a/tannae-server/src/main/resources/application.properties
+++ b/tannae-server/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=wodnjs0716.
 # Spring View
 spring.jpa.open-in-view=false
+# Thread
+server.tomcat.threads.max=200
+server.tomcat.threads.min-spare=10
+server.tomcat.accept-count=100
+server.port=8080
