--- a/tannae-client/app/build.gradle
+++ b/tannae-client/app/build.gradle
@@ -6,10 +6,10 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "codesver.tannae"
+        applicationId "com.team_seven.tannae"
         minSdk 29
         targetSdk 31
-        versionCode 1
+        versionCode 3
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
